# portfolio-agent

./: 1_simple_graph.ipynb  2_graph_with_condition.ipynb  3_chatbot.ipynb  4_tool_call.ipynb  5_tool_call_agent.ipynb  6_memory.ipynb  7_langsmith.ipynb  8_HITL.py  9_Portfolio_agent.ipynb  LICENSE.md  README.md  pyproject.toml  rough.ipynb
